feat: 增加背景图片

--- a/bilibili-lite/src/game/base.styl
+++ b/bilibili-lite/src/game/base.styl
@@ -5,7 +5,6 @@ footer
 .g-title .btn .ic-gift
   display none
 
-#page .game
 .banner
 .listing-ul li
 .pagination a.backhome
@@ -27,6 +26,7 @@ a.listing-btn:hover
 .gift-recommend .gift-box .info .price-box .price-old:before
   background-color var(--c-border) !important
 
+#page .game
 #page .game .game-box h4
 .gift-recommend .gift-box .info .price-box em
 .gift-all .gift-box .info .price-box em
@@ -61,6 +61,7 @@ a.listing-btn:hover
 .listing-sort a.active
 .listing-sort a:hover
 .pagination a.backhome:hover
+.banner-p a:hover
   border-color var(--c-accent)
 
 .banner
@@ -96,12 +97,12 @@ a.listing-btn:hover
   display flex
   justify-content space-between
   align-items center
-  margin-bottom 30px
 
   li
     float none
     flex 1
     width auto
+    transition all 0.3s ease-in-out
 
 /* 清除按钮样式 */
 button
