--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -12,6 +12,7 @@
 	background-color var(--c-hover)
 
 .gg-carousel .gg-icon
+.live-card .up .txt .tag
 	background-color transparent !important
 
 .video-card-common .ex-up
