--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -6,13 +6,11 @@
 .area-banner
 	display none !important
 
-.text-info-ctnr.body-bg
 .highlight-area-item
 .news-ctnr
 .hab-ctnr
 .rank-ctnr
 .hover-panel-wrapper
-.hover-panel-wrapper .text-info-ctnr
 .rec-area-item
 .link-footer
 .live-sidebar-ctnr
@@ -20,6 +18,10 @@
 
 .gift-item.buy.hover
 	background-color var(--c-hover) !important
+
+.text-info-ctnr.body-bg
+.hover-panel-wrapper .text-info-ctnr
+	background-color transparent !important
 
 .bilibili-live-player[data-player-type='player-home'] .bilibili-live-player-enter-tips:hover
 .blp-red-tip:after
