--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -23,12 +23,15 @@
 .style-section .tag-block .tag-containers .style-tag
   color var(--c-text) !important
 
-.style-section .tag-block .tag-containers .style-tag.selected
-.style-section .tag-block .tag-containers .style-tag:hover
+.size-ruler .style-section .tag-block .tag-containers .style-tag.selected
+.size-ruler .style-section .tag-block .tag-containers .style-tag:hover
   color var(--c-accent) !important
 
 .section-navigator
   border-color var(--c-border) !important
+
+.recommendation-section
+  margin 0 !important
 
 .section-navigator .section-item
   transition all 0.3s ease-in-out !important
@@ -41,6 +44,10 @@
 .newbie-awarder .floating-button .widget-close-button img
   border-radius 50%
   background-color var(--c-border)
+
+.app-layout .size-ruler.p-relative.m-auto
+	margin-top: 60px
+	padding: 20px
 
 .manga-navbar-history-list .action-button
 .manga-navbar-favourite-manga .action-button
