--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -197,6 +197,7 @@ textarea
 .content-wrap
 .bili-header-m .i_menu_login
 .el-dropdown-menu
+.action-menu .menu-list
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
