--- a/bilibili-lite/src/public/base.styl
+++ b/bilibili-lite/src/public/base.styl
@@ -1,11 +1,20 @@
 /* 全局样式 */
 html
+	height auto
+	min-height 100vh
 	background-color var(--c-background)
+	background-image var(--bg-image, none)
+	background-attachment fixed
+	background-position center
+	background-size cover
+	background-repeat no-repeat
 
 body
-	background-color var(--c-background)
-	background-image none
+	height auto
+	min-height 100vh
 	overflow-x hidden
+	background-color var(--c-bg-mask)
+	background-image none
 
 a
 a div
