--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -14,8 +14,8 @@
 .bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar
 .members-info__header
 .bilibili-player .bilibili-player-area .bilibili-player-video-panel
-.v-wrap .danmaku-wrap
 .coin-dialog-mask .coin-operated
+#comment
 	background-color var(--c-background) !important
 
 .multi-page .cur-list .list-box li.on
@@ -38,6 +38,7 @@
 
 .bilibili-player em
 .bilibili-player.mode-webfullscreen .bilibili-player-video-control-wrap .bilibili-player-video-control-bottom-center .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-danmaku-input
+.comment-m .comment
 	background-color transparent !important
 
 .bui-slider .bui-track .bui-bar-wrap .bui-bar
@@ -127,6 +128,9 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player
 	box-shadow none
 
+.v-wrap
+	margin-bottom 0 !important
+
 .bilibili-player-ending-panel
 	backdrop-filter blur(5px)
 
@@ -152,6 +156,10 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-video-danmaku-switch:hover .bp-svgicon svg
 .bilibili-player-video-btn-fullscreen:hover .bp-svgicon svg .st0
 	fill var(--c-accent) !important
+
+.comment-m
+	padding: 20px
+	border-radius: 4px
 
 .bilibili-player-video-bottom-area .bilibili-player-video-sendbar
 .tag-info-pane
