--- a/bilibili-lite/src/live/active.styl
+++ b/bilibili-lite/src/live/active.styl
@@ -11,8 +11,8 @@
 .bingo-list
   background-color var(--c-hover) !important
 
-body
-  background-color transparent !important
+// body
+//   background-color transparent !important
 
 .bili-share-pc .title
 .popup-bg-cntr .popup-cntr .right-part .activity-name
