--- a/bilibili-lite/src/live/list.styl
+++ b/bilibili-lite/src/live/list.styl
@@ -75,7 +75,7 @@
 .list-filter-bar .item-text.expand
 .list-filter-bar .item-text:hover
   border-color var(--c-accent) !important
-  background-color var(--c-background) !important
+  // background-color var(--c-background) !important
   color var(--c-accent) !important
 
 .container
