--- a/bilibili-lite/src/manga/account.styl
+++ b/bilibili-lite/src/manga/account.styl
@@ -4,8 +4,7 @@
 .sidebar .nav-line
   display none !important
 
-.app-layout .page-content
-.sidebar
+.app-layout .page-content .router-view
 .recharge-panel-container .recharge-panel
 .recharge-panel-container .recharge-panel .charge-title .tab-name.is-active
   background-color var(--c-background) !important
@@ -22,6 +21,8 @@
 .recharge-option-container .recharge-config-list .recharge-list-container .list-item:hover
   background-color var(--c-hover) !important
 
+.app-layout .page-content
+.sidebar
 .user-info-component .user-info .uid
   background-color transparent !important
 
@@ -72,6 +73,9 @@
 .auto-purchase .page-sub-title .question-icon .hover-tab
 .question-icon .hover-tab
   border 1px solid var(--c-border)
+
+.app-layout .page-content .router-view
+  border-radius: 4px
 
 .shadow-is-the-light
   box-shadow none !important
