--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -116,6 +116,9 @@
 .mini-header .nav-user-center .item:nth-child(3) .nav-item .i-frame
 	height 206px
 
+.mini-header .nav-user-center .item:nth-child(4) .nav-item .i-frame
+	height 520px
+
 .van-popper-avatar .level-bar
 .bili-header-m .profile-m .grade .bar
 	background-color var(--c-border) !important
@@ -130,10 +133,14 @@
 .bili-header-m .profile-m .grade .bar .lt
 .bili-header-m .profile-m .grade .bar .rate
 .bp-red-point
+.vip.vip--green
 	background-color var(--c-accent) !important
 
 .lang-change .lang-item .lang-title
 	color var(--c-title) !important
+
+.out-container .video-tab .tip-box
+	color var(--c-text) !important
 
 .lang-change .lang-item:hover .lang-title
 .lang-change .lang-intro-item.on
@@ -141,6 +148,7 @@
 .bili-header-m .profile-m .grade .desc-tips .lv-row strong
 .out-container .tab-bar .tab-item:hover
 .van-popper-avatar .logout a:hover
+.nickname.nickname--green
 	color var(--c-accent) !important
 
 .out-container .tab-bar .active:hover
@@ -189,7 +197,7 @@
 /* 动态弹窗 */
 .out-container
 	box-shadow none !important
-	background-color var(--c-background) !important
+	background-color transparent !important
 
 .tab-bar
 	border-color var(--c-border) !important
