--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -32,7 +32,6 @@
 .bili-tab .bili-tab-item.on:before
 	display none !important
 
-.spread-module .num
 .audio-list .song-list .song-li .content .text
 .game-groom-m .title
 .game-groom-m .num
@@ -57,6 +56,9 @@
 
 .split-line
 	background-color var(--c-border) !important
+
+.spread-module .num
+	background-color: transparent !important
 
 .primary-menu .nav-menu .channel.on:after
 .timeline-box .timeline-item.new p.num a
@@ -96,6 +98,7 @@
 .sub-nav-m ul li.on a
 .hot-recom-wrapper .hot-trailer .player-list .list-count .num
 .filter-block .filter-item-wrapper .filter-item:hover
+.sub-nav-m ul li a:hover
 	color var(--c-accent) !important
 
 .primary-menu.border-b
@@ -125,6 +128,9 @@
 
 .international-header .primary-menu-itnl
 	border 0
+
+.block-area:last-child
+	margin: 0
 
 .charge-header-bg
 	background-image none !important
@@ -252,7 +258,15 @@
 .video-list-recom .video-list-video
 	margin-left 0
 
+.spread-module .t
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis
+
 .bilibili-player button
+.pager .pages .page-item.prev
+.pager .pages .page-item.next
+	border: 0 !important
 	background-color transparent !important
 
 	span
