--- a/bilibili-lite/src/v/game.styl
+++ b/bilibili-lite/src/v/game.styl
@@ -100,6 +100,11 @@
 .international-header .mini-type
   box-shadow none !important
 
+.game-content .match-box.match-bottom
+.game-content
+.bili-game-local .pager
+  margin-bottom 0 !important
+
 .game-banner
   margin-top -56px
 
